[package]
name = "ref-mut-n"
version = "1.0.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Defines a nested mutable reference."

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.88", features = ["full", "extra-traits"] }
quote = "1.0.15"
log = "0.4.8"
